--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 </head>
 <body>
   <h1>🔥 BGMI Tournament Leaderboard 🔥</h1>
-  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlinkID/pubhtml?widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1NowDPSNrHZlRQ3zuHWUmXxg3i7fT8L68jypr8e2kMjw/preview" width="100%" height="600"></iframe>
 </body>
 </html>
